force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__SampleEligibility__c.field-meta.xml
<CustomField>
    <fullName>OCE__SampleEligibility__c</fullName>
    <description>Sample eligibility icons for State License, SDL and DEA License</description>
    <formula>IMAGE(&quot;&quot;,&quot;&quot;) + &apos; &apos; +
            IF(
            $Setup.OCE__StateLicenseNumberSettings__c.OCE__IsEnabledOnLogACall__c,
            OCE__LicenseFormulaState__c,
            &apos;&apos;
            ) + &apos; &apos; +
            IF(
            AND(
            $Setup.OCE__StateLicenseNumberSettings__c.OCE__IsTDDDLicensingEnabled__c,
            CONTAINS($Setup.OCE__StateLicenseNumberSettings__c.OCE__TDDDStates__c,
            OCE__State__c)
            ),
            OCE__TDDDLicenseValidationIcon__c,
            &apos;&apos;
            ) + &apos; &apos; +
            IF(
            $Setup.OCE__StateLicenseNumberSettings__c.OCE__IsDEALicensingEnabled__c,
            OCE__DEALicenseValidationIcon__c,
            &apos;&apos;
            )</formula>
    <inlineHelpText>Sample eligibility icons for State License, SDL and DEA License</inlineHelpText>
    <label>Sample Eligibility</label>
    <type>Text</type>
</CustomField>