force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__SampleEligibilityStatus__c.field-meta.xml
<CustomField>
    <fullName>OCE__SampleEligibilityStatus__c</fullName>
    <description>Displays the status of the doctor&apos;s eligibility to sign for samples. This allows the Rep to identify if the doctor they are calling on can sign for samples or not, and the status the eligibility falls into.</description>
    <inlineHelpText>Displays the status of the doctor&apos;s eligibility to sign for samples. This allows the Rep to identify if the doctor they are calling on can sign for samples or not, and the status the eligibility falls into.</inlineHelpText>
    <label>Sample Eligibility Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Grace Period</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>