force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__Sampling__c.field-meta.xml
<CustomField>
    <fullName>OCE__Sampling__c</fullName>
    <description>Stores Sampling</description>
    <inlineHelpText>Stores Sampling</inlineHelpText>
    <label>Sampling</label>
    <length>100</length>
    <type>Text</type>
</CustomField>