force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__SamplingFormulaDashboard__c.field-meta.xml
<CustomField>
    <fullName>OCE__SamplingFormulaDashboard__c</fullName>
    <description>Shows pill if Sampling is not empty</description>
    <formula>IF( OCE__Account__r.IsPersonAccount,
  IF( $Setup.OCE__StateLicenseNumberSettings__c.OCE__IsEnabledOnLightningPages__c, 
    IF(
      OCE__LicenseFormulaValidation__c,
      IMAGE(&quot;/resource/OCE__ApolloIcons/png/state-green.png&quot;, &quot;&quot;, 25, 65),
      IMAGE(&quot;/resource/OCE__ApolloIcons/png/state-red.png&quot;, &quot;&quot;, 25, 65)
      ),
    &quot;&quot;
    ),
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows pill if Sampling is not empty</inlineHelpText>
    <label>Sampling</label>
    <type>Text</type>
</CustomField>