force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__State2__c.field-meta.xml
<CustomField>
    <fullName>OCE__State2__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>State of the address.</description>
    <formula>IF(ISBLANK(TEXT(OCE__Address__r.OCE__StateCode2__c)),TEXT(OCE__Address__r.OCE__StateCode__c), TEXT(OCE__Address__r.OCE__StateCode2__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>State of the address.</inlineHelpText>
    <label>State 2</label>
    <type>Text</type>
</CustomField>