force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__State__c.field-meta.xml
<CustomField>
    <fullName>OCE__State__c</fullName>
    <description>State of the address.</description>
    <formula>TEXT( OCE__Address__r.OCE__StateCode__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>State of the address.</inlineHelpText>
    <label>State</label>
    <type>Text</type>
</CustomField>