force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__StateLicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>OCE__StateLicenseNumber__c</fullName>
    <description>Stores State License Number</description>
    <inlineHelpText>Stores State License Number</inlineHelpText>
    <label>State License Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>