force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__Suite__c.field-meta.xml
<CustomField>
    <fullName>OCE__Suite__c</fullName>
    <description>Shows Address Suite</description>
    <formula>OCE__Address__r.OCE__Suite__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows Address Suite</inlineHelpText>
    <label>Suite #</label>
    <type>Text</type>
</CustomField>