force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__TDDDCategory2__c.field-meta.xml
<CustomField>
    <fullName>OCE__TDDDCategory2__c</fullName>
    <description>Identifies type of SDL</description>
    <label>SDL Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Category II</fullName>
            </value>
            <value>
                <fullName>Category III</fullName>
            </value>
            <value>
                <fullName>LIMITED CATEGORY II</fullName>
            </value>
            <value>
                <fullName>LIMITED CATEGORY III</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>