force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__TDDDCategory__c.field-meta.xml
<CustomField>
    <fullName>OCE__TDDDCategory__c</fullName>
    <description>Identifies type of SDL</description>
    <formula>IF(
            OCE__IsCopyTDDDData__c ,
            IF( ISBLANK( OCE__Address__r.OCE__TDDDLicense__c ),
                TEXT( OCE__TDDDCategory2__c ) ,
                TEXT( OCE__Address__r.OCE__TDDDCategory__c )
            ),
            TEXT( OCE__TDDDCategory2__c )
        )</formula>
    <label>SDL Category</label>
    <type>Text</type>
</CustomField>