force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__TDDDIsNeededForState__c.field-meta.xml
<CustomField>
    <fullName>OCE__TDDDIsNeededForState__c</fullName>
    <description>Shows if SDL is needed for State selected in Adress__r.StateCode__c</description>
    <formula>OCE__Address__r.OCE__TDDDIsNeededForState__c</formula>
    <label>SDL Is Needed For State</label>
    <type>Checkbox</type>
</CustomField>