force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__TDDDLicenseExpirationDate2__c.field-meta.xml
<CustomField>
    <fullName>OCE__TDDDLicenseExpirationDate2__c</fullName>
    <description>Expiration date for SDL.</description>
    <label>SDL Expiration Date</label>
    <type>DateTime</type>
</CustomField>