force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__TDDDLicenseExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__TDDDLicenseExpirationDate__c</fullName>
    <description>Expiration date for SDL.</description>
    <formula>IF(
            OCE__IsCopyTDDDData__c ,
            IF( ISBLANK( OCE__Address__r.OCE__TDDDLicense__c ),
                OCE__TDDDLicenseExpirationDate2__c ,
                OCE__Address__r.OCE__TDDDExpirationDate__c
            ),
            OCE__TDDDLicenseExpirationDate2__c
        )</formula>
    <label>SDL Expiration Date</label>
    <type>DateTime</type>
</CustomField>