force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__TDDDLicenseNumber2__c.field-meta.xml
<CustomField>
    <fullName>OCE__TDDDLicenseNumber2__c</fullName>
    <description>SDL number for current AccountAddress - SDL allows a business entity to purchase and possess dangerous drugs at a specific address for distribution to patients.</description>
    <label>SDL #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>