force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__TDDDLicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>OCE__TDDDLicenseNumber__c</fullName>
    <description>SDL number for current AccountAddress - SDL allows a business entity to purchase and possess dangerous drugs at a specific address for distribution to patients.</description>
    <formula>IF(
            OCE__IsCopyTDDDData__c ,
            IF( ISBLANK( OCE__Address__r.OCE__TDDDLicense__c ),
                OCE__TDDDLicenseNumber2__c ,
                OCE__Address__r.OCE__TDDDLicense__c
            ),
            OCE__TDDDLicenseNumber2__c
        )</formula>
    <label>SDL #</label>
    <type>Text</type>
</CustomField>