force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__TDDDLicenseStatus__c.field-meta.xml
<CustomField>
    <fullName>OCE__TDDDLicenseStatus__c</fullName>
    <description>Identifies Status of SDL</description>
    <formula>IF(
            OCE__IsCopyTDDDData__c ,
            IF( ISBLANK( OCE__Address__r.OCE__TDDDLicense__c ),
                TEXT( OCE__TDDDLicenseStatus2__c ) ,
                TEXT( OCE__Address__r.OCE__TDDDLicenseStatus__c )
            ),
            TEXT( OCE__TDDDLicenseStatus2__c )
        )</formula>
    <label>SDL Status</label>
    <type>Text</type>
</CustomField>