force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__TDDDLicenseValidation__c.field-meta.xml
<CustomField>
    <fullName>OCE__TDDDLicenseValidation__c</fullName>
    <description>Identifies if SDL is valid</description>
    <formula>IF(
                OCE__IsTDDDLicenseExemption2__c,
                true,
                AND(
                    OCE__TDDDLicenseNumber2__c != null,
                    OCE__IsTDDDLicenseStatusActive2__c,
                    DATEVALUE(OCE__TDDDLicenseExpirationDate2__c) &gt;= TODAY()
                )
            )</formula>
    <label>TDDD License Validation</label>
    <type>Checkbox</type>
</CustomField>