force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__TDDDLimitedCategoryProducts__c.field-meta.xml
<CustomField>
    <fullName>OCE__TDDDLimitedCategoryProducts__c</fullName>
    <description>JSON string that contains list of SDL limited category products. Duplicates same field value of parent Address__c, since long text area fields cannot be used in formula.</description>
    <label>SDL Limited Category Products</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>