force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__TDDDSubcategory2__c.field-meta.xml
<CustomField>
    <fullName>OCE__TDDDSubcategory2__c</fullName>
    <description>Identifies subtype of SDL</description>
    <label>SDL Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>02</fullName>
            </value>
            <value>
                <fullName>03</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>