force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__TDDDSubcategory__c.field-meta.xml
<CustomField>
    <fullName>OCE__TDDDSubcategory__c</fullName>
    <description>Identifies subtype of SDL</description>
    <formula>IF(
            OCE__IsCopyTDDDData__c ,
            IF( ISBLANK( OCE__Address__r.OCE__TDDDLicense__c ),
                TEXT( OCE__TDDDSubcategory2__c ) ,
                TEXT( OCE__Address__r.OCE__TDDDSubcategory__c )
            ),
            TEXT( OCE__TDDDSubcategory2__c )
        )</formula>
    <label>SDL Subcategory</label>
    <type>Text</type>
</CustomField>