force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__VisitRestriction__c.field-meta.xml
<CustomField>
    <fullName>OCE__VisitRestriction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stores Visit Restriction</description>
    <inlineHelpText>Stores Visit Restriction</inlineHelpText>
    <label>Visit Restriction</label>
    <type>Checkbox</type>
</CustomField>