force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__WebAddress__c.field-meta.xml
<CustomField>
    <fullName>OCE__WebAddress__c</fullName>
    <description>Stores Web Address</description>
    <inlineHelpText>Stores Web Address</inlineHelpText>
    <label>Web Address</label>
    <type>Url</type>
</CustomField>