force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__Workplace__c.field-meta.xml
<CustomField>
    <fullName>OCE__Workplace__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Workplace name from Account</description>
    <inlineHelpText>Workplace name from Account</inlineHelpText>
    <label>Workplace</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Addresses (Workplace ID)</relationshipLabel>
    <relationshipName>Account_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>