force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__WorkplaceAddress__c.field-meta.xml
<CustomField>
    <fullName>OCE__WorkplaceAddress__c</fullName>
    <description>Workplace Address.</description>
    <formula>OCE__Workplace__r.Name
            + IF (ISBLANK(OCE__Workplace__r.OCE__BuildingLabel__c)
            ,&apos;&apos;
            ,&apos; (&apos;+ OCE__Workplace__r.OCE__BuildingLabel__c + &apos;)&apos;
            )
            + IF (ISBLANK(OCE__Workplace__r.OCE__PrimaryAccountAddress__r.OCE__AddressLine1__c)
            ,&apos;&apos;
            ,&apos;, &apos; + OCE__Workplace__r.OCE__PrimaryAccountAddress__r.OCE__AddressLine1__c
            )
            + IF( ISBLANK(OCE__Workplace__r.OCE__PrimaryAccountAddress__r.OCE__Brick__c)
            ,&apos;&apos;
            ,&apos;, &apos; + OCE__Workplace__r.OCE__PrimaryAccountAddress__r.OCE__Brick__c
            )
            + IF( ISBLANK(OCE__Workplace__r.OCE__PrimaryAccountAddress__r.OCE__City__c)
            ,&apos;&apos;
            ,&apos;, &apos; + OCE__Workplace__r.OCE__PrimaryAccountAddress__r.OCE__City__c
            )</formula>
    <label>Workplace Address</label>
    <type>Text</type>
</CustomField>