force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__WorkplaceGrandParent__c.field-meta.xml
<CustomField>
    <fullName>OCE__WorkplaceGrandParent__c</fullName>
    <description>The immediate parent of the workplace. Ex: if department is the workplace selected, WorkplaceGrandParent__c is the antecedent of it.</description>
    <formula>OCE__Workplace__r.OCE__ParentAccount__c</formula>
    <label>Workplace Grand Parent</label>
    <type>Text</type>
</CustomField>