force-app/main/default/objects/OCE__AccountAddress__c/fields/OCE__ZipCode__c.field-meta.xml
<CustomField>
    <fullName>OCE__ZipCode__c</fullName>
    <description>Zip code of the address.</description>
    <formula>OCE__Address__r.OCE__ZipCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Zip code of the address.</inlineHelpText>
    <label>Zip Code</label>
    <type>Text</type>
</CustomField>