force-app/main/default/objects/OCE__AccountAddress__c/validationRules/OCE__Disable_OCEx_subscribed_records_edit.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE__Disable_OCEx_subscribed_records_edit</fullName>
    <active>false</active>
    <description>Disables creating or editing OCEx subscribed account addresses</description>
    <errorConditionFormula>$Permission.OCE__OCEx_SuperAdmin = FALSE &amp;&amp; $Permission.OCE__OCEx_Admin = FALSE &amp;&amp; OCE__Account__r.OCE__IsSubscribed__c = TRUE</errorConditionFormula>
    <errorMessage>You cannot edit or create subscribed account addresses</errorMessage>
</ValidationRule>