force-app/main/default/objects/OCE__AccountAddress__c/validationRules/OCE__Restrict_Global_Workplace_Selection.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE__Restrict_Global_Workplace_Selection</fullName>
    <active>false</active>
    <description>While creating/editing local account address, assigning global workplace is not allowed.</description>
    <errorConditionFormula>AND( OCE__Account__r.OCE__IsGlobal__c = false, OCE__Account__r.OCE__IsSubscribed__c = false, OCE__Workplace__r.OCE__IsGlobal__c = true, OCE__Workplace__r.OCE__IsSubscribed__c = true)</errorConditionFormula>
    <errorDisplayField>OCE__Workplace__c</errorDisplayField>
    <errorMessage>A Global Workplace cannot be assigned to a Non-Global Account.</errorMessage>
</ValidationRule>