force-app/main/default/objects/OCE__AccountAddress__c/validationRules/OCE__Restrict_workplace_edit.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE__Restrict_workplace_edit</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(PRIORVALUE(OCE__Workplace__c))) &amp;&amp; 
        ISCHANGED(OCE__Workplace__c) &amp;&amp; 
        $Setup.OCE__SearchBeforeCreateConfig__c.OCE__EnforceWorkplaceAddressDependency__c = true &amp;&amp; 
        $Profile.Name &lt;&gt; &apos;Admin&apos; &amp;&amp; 
        $Profile.Name &lt;&gt; &apos;OCE Admin&apos; &amp;&amp; 
        $Profile.Name &lt;&gt; &apos;System Administrator&apos;</errorConditionFormula>
    <errorMessage>Workplace cannot be edited. Please deactivate and create a new Record.</errorMessage>
</ValidationRule>