force-app/main/default/objects/OCE__AccountAddress__c/validationRules/OCE__Workplace_field_needs_to_be_an_HCO_acc.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE__Workplace_field_needs_to_be_an_HCO_acc</fullName>
    <active>true</active>
    <description>Workplace field needs to be an HCO account</description>
    <errorConditionFormula>AND(ISCHANGED(OCE__Workplace__c),NOT(ISBLANK(OCE__Workplace__c)),OCE__Account__r.IsPersonAccount,OCE__Workplace__r.IsPersonAccount)</errorConditionFormula>
    <errorMessage>Workplace field needs to be an HCO account</errorMessage>
</ValidationRule>