force-app/main/default/objects/OCE__AccountAddress__c/validationRules/OCE__Workplace_valid_for_HCP_Accounts_only.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE__Workplace_valid_for_HCP_Accounts_only</fullName>
    <active>false</active>
    <description>Workplace field is valid for HCP accounts only</description>
    <errorConditionFormula>AND(NOT(ISBLANK(OCE__Workplace__c)),NOT(OCE__Account__r.IsPersonAccount))</errorConditionFormula>
    <errorMessage>Workplace field is valid for HCP accounts only.</errorMessage>
</ValidationRule>