force-app/main/default/objects/OCE__AccountAddress__c/listViews/OCE__All1.listView-meta.xml
<ListView>
    <fullName>OCE__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>